[minor] Enhance pipeline status reporting

--- a/tekton/src/pipelines/mas-fvt-finally.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-finally.yml.j2
@@ -24,6 +24,23 @@ spec:
       description: "Determines whether to run final tasks or just the data collection task"
 
   tasks:
+    - name: pipeline-start
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          value: Started
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
+
     # Delete IBM Cloud services
     # -------------------------------------------------------------------------
     # COS
@@ -32,6 +49,8 @@ spec:
         - input: $(params.deprovision)
           operator: in
           values: ["true", "True"]
+      runAfter:
+        - pipeline-start
 
     # Event Streams
     {{ lookup('template', 'taskdefs/dependencies/fvt-deprovision-kafka.yml.j2') | indent(4) }}
@@ -39,7 +58,9 @@ spec:
         - input: $(params.deprovision)
           operator: in
           values: ["true", "True"]
-    
+      runAfter:
+        - pipeline-start
+
     # Collect must-gather
     # -------------------------------------------------------------------------
     - name: must-gather
@@ -91,6 +112,28 @@ spec:
           values: ["true", "True"]
       runAfter:
         - finalize
+
+  # Finally
+  # ---------------------------------------------------------------------------
+  finally:
+    - name: pipeline-finish
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          # An aggregate status of all the pipelineTasks under the tasks section (excluding the finally section).
+          # This variable is only available in the finally tasks and can have any one of the values (Succeeded, Failed, Completed, or None)
+          value: $(tasks.status)
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
 
   workspaces:
     # Shared storage to hold mustgather output for tasks
