--- a/tekton/src/tasks/framework/update-pipeline-status.yml.j2
+++ b/tekton/src/tasks/framework/update-pipeline-status.yml.j2
@@ -21,7 +21,7 @@ spec:
     - name: update-pipeline-status
       image: quay.io/ibmmas/cli:latest
       command:
-        - /opt/app-root/src/update-pipeline-status.sh
+        - /opt/app-root/src/update-pipeline-status.py
       env:
         - name: DEVOPS_MONGO_URI
           valueFrom:
