--- a/tekton/src/tasks/framework/update-pipeline-status.yml.j2
+++ b/tekton/src/tasks/framework/update-pipeline-status.yml.j2
@@ -41,7 +41,7 @@ spec:
               name: mas-devops
               key: MAS_INSTANCE_ID
               optional: true
-        - name: PIPELINE_STAUS
+        - name: PIPELINE_STATUS
           value: $(params.pipeline_status)
         - name: PIPELINE_NAME
           value: $(params.pipeline_name)
