--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
@@ -140,13 +140,13 @@ locals {
     }
     name = var.cluster_name
     {%- endif %}
-  {%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') -%}
+  {%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') %}
     #----EFS/MSK related params starts----
     "external_subnet_ids" : data.aws_subnets.external_subnets.ids
     "internal_subnet_ids" : data.aws_subnets.internal_subnets.ids
     #----EFS/MSK related params ends----
   {%- endif %}
-  {%- if IS_MSK | lower == 'true' -%}
+  {%- if IS_MSK | lower == 'true' %}
     #----MSK related params starts----
     "security_groups" : ["{{ SECURITY_GROUPS_VALUE }}"]
     #----MSK related params ends----
