--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-instance-base.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-instance-base.yaml.j2
@@ -39,9 +39,8 @@ additional_vpn: {{ ADDITIONAL_VPN }}
 additional_infrastructure:
   install: {{ ADDITIONAL_INFRASTRUCTURE_INSTALL }}
 {% if ADDITIONAL_INFRASTRUCTURE_INSTANCES is defined and ADDITIONAL_INFRASTRUCTURE_INSTANCES != '' %}
-{%- set instances_yaml = ADDITIONAL_INFRASTRUCTURE_INSTANCES | from_yaml | to_nice_yaml(indent=2) %}
-  instances:
-{{ instances_yaml | indent(4, first=True) }}
+{%- set instances_dict = ADDITIONAL_INFRASTRUCTURE_INSTANCES | toYaml %}
+  instances: {{ instances_dict }}
 {% endif %}
 {% endif %}
 
