--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
@@ -21,12 +21,15 @@ variable "vpc_name" {
 }
 {%- endif %}
 
-{%- if IS_S3 | lower == 'true'%}
+{%- if (IS_S3 | lower == 'true') or (IS_MSK | lower == 'true')%}
 variable "name_prefix" {
     type        = string
     description = "name_prefix"
 }
+{%- endif %}
 
+
+{%- if IS_S3 | lower == 'true'%}
 variable "account_id" {
     type        = string
     description = "account id"
