[minor] Support Integrated AI Service installation with MAS (#1962)
Co-authored-by: Bhautik Vala <bhautikvala@ibm.com>
Co-authored-by: Divyesh Khokhar <Divyesh.K@ibm.com>
Co-authored-by: David Parker <parkerda@uk.ibm.com>

--- a/tekton/src/tasks/aiservice/aiservice.yml.j2
+++ b/tekton/src/tasks/aiservice/aiservice.yml.j2
@@ -21,7 +21,7 @@ spec:
     - name: ibm_entitlement_key
       type: string
 
-    # MAS Details
+    # AI Service Details
     - name: aiservice_instance_id
       type: string
       description: AI Service Instance ID
@@ -166,7 +166,7 @@ spec:
       - name: IBM_ENTITLEMENT_KEY
         value: $(params.ibm_entitlement_key)
 
-      # MAS Details
+      # AI Service Details
       - name: AISERVICE_INSTANCE_ID
         value: $(params.aiservice_instance_id)
       - name: AISERVICE_CHANNEL
