--- a/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
@@ -9,6 +9,12 @@
       value: $(params.mas_instance_id)
     - name: mas_app_id
       value: manage
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
+    - name: manage_bind_aiservice_instance_id
+      value: $(params.manage_bind_aiservice_instance_id)
+    - name: manage_bind_aiservice_tenant_id
+      value: $(params.manage_bind_aiservice_tenant_id)
     - name: artifactory_username
       value: $(params.artifactory_username)
     - name: artifactory_token
@@ -70,16 +76,16 @@
       value: $(params.mas_app_settings_customization_archive_username)
     - name: mas_app_settings_customization_archive_password
       value: $(params.mas_app_settings_customization_archive_password)
-    - name: mas_app_settings_crypto_key
-      value: $(params.mas_app_settings_crypto_key)
-    - name: mas_app_settings_cryptox_key
-      value: $(params.mas_app_settings_cryptox_key)
-    - name: mas_app_settings_old_crypto_key
-      value: $(params.mas_app_settings_old_crypto_key)
-    - name: mas_app_settings_old_cryptox_key
-      value: $(params.mas_app_settings_old_cryptox_key)
-    - name: mas_app_settings_override_encryption_secrets_flag
-      value: $(params.mas_app_settings_override_encryption_secrets_flag)
+    - name: mas_manage_encryptionsecret_crypto_key
+      value: $(params.mas_manage_encryptionsecret_crypto_key)
+    - name: mas_manage_encryptionsecret_cryptox_key
+      value: $(params.mas_manage_encryptionsecret_cryptox_key)
+    - name: mas_manage_encryptionsecret_old_crypto_key
+      value: $(params.mas_manage_encryptionsecret_old_crypto_key)
+    - name: mas_manage_encryptionsecret_old_cryptox_key
+      value: $(params.mas_manage_encryptionsecret_old_cryptox_key)
+    - name: mas_manage_ws_db_encryptionsecret
+      value: $(params.mas_manage_ws_db_encryptionsecret)
     - name: mas_app_settings_default_jms
       value: $(params.mas_app_settings_default_jms)
     - name: mas_manage_attachment_configuration_mode
