--- a/tekton/src/pipelines/taskdefs/dependencies/arcgis.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/arcgis.yml.j2
@@ -27,9 +27,9 @@
     name: mas-devops-arcgis
     kind: Task
   when:
-    - input: "$(params.mas_app_channel_manage)"
-      operator: notin
-      values: [""]
     - input: "$(params.install_arcgis)"
       operator: in
       values: ["true", "True"]
+    - input: "$(params.mas_arcgis_channel)"
+      operator: notin
+      values: [""]  
