[patch] Update timeout of manage argo app from 7 to 10.5 hours for FVT test

--- a/tekton/src/tasks/gitops/gitops-mas-fvt-preparer.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mas-fvt-preparer.yml.j2
@@ -338,7 +338,7 @@ spec:
       - |-
 
         set -o pipefail
-        trap '[[ $? -eq 1 ]] && mas must-gather --directory /workspace/mustgather --mas-instance-ids ${MAS_INSTANCE_ID} --extra-namespaces selenium,mas-${MAS_INSTANCE_ID}-syncres' ERR EXIT
+        trap '[[ $? -eq 1 ]] && mas must-gather --directory /workspace/mustgather --mas-instance-ids ${MAS_INSTANCE_ID} --extra-namespaces selenium,mas-${MAS_INSTANCE_ID}-syncres,mas-${MAS_INSTANCE_ID}-postsyncjobs' ERR EXIT
 
 
         get_trailing_number() {
@@ -507,7 +507,7 @@ spec:
           fi
           if [[ "$LAUNCHFVT_MANAGE" == "true" ]]; then
             MASAPP_APP="manage.${CLUSTER_NAME}.${MAS_INSTANCE_ID}"
-            check_argo_app_healthy "${MAS_WORKSPACE_ID}.${MASAPP_APP}" 840
+            check_argo_app_healthy "${MAS_WORKSPACE_ID}.${MASAPP_APP}" 1260
           fi
           if [[ "$LAUNCHFVT_MOBILE" == "true" ]]; then
             MASAPP_APP="manage.${CLUSTER_NAME}.${MAS_INSTANCE_ID}"
