--- a/tekton/src/pipelines/mas-install.yml.j2
+++ b/tekton/src/pipelines/mas-install.yml.j2
@@ -297,6 +297,8 @@ spec:
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/dependencies/arcgis.yml.j2') | indent(4) }}
       runAfter:
         - suite-verify
+        - app-install-manage
+        - app-install-facilities
 
 
     # 7. Install & Configure IoT
