--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
@@ -1,238 +1,11 @@
-{%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') -%}
-data "aws_subnets" "external_subnets" {
-  filter {
-    name   = "vpc-id"
-    values = [var.vpc_id]
-  }
-  filter {
-    name   = "cidr-block"
-    values = {{ CLUSTER_CIDR_WORKLOAD_EXTERNAL }}
-  }
-}
-
-data "aws_subnets" "internal_subnets" {
-  filter {
-    name   = "vpc-id"
-    values = [var.vpc_id]
-  }
-  filter {
-    name   = "cidr-block"
-    values = {{ CLUSTER_CIDR_WORKLOAD_INTERNAL }}
-  }
-}
-{%- endif %}
-
+{%- include 'common/_aws_data_sources.yaml.j2' %}
 
 locals {
-{%- if IS_S3 | lower == 'true' %}
-{%- if S3_MANAGE | lower == 'true'  %}
-  #----Manage related params for S3 starts----
-  iam_user_arns_manage = {
-    custfiles = "${var.iam_user_arn_prefix_manage}-custfiles-${var.access_level_rw}"
-    doclinks  = "${var.iam_user_arn_prefix_manage}-doclinks-${var.access_level_rw}"
-    logs_rw   = "${var.iam_user_arn_prefix_manage}-log-${var.access_level_rw}"
-    logs_ro   = "${var.iam_user_arn_prefix_manage}-log-${var.access_level_ro}"
-  }
-
-  s3_iam_users_list_manage = {
-    doclinks = {
-      bucket_name   = "${var.s3bucket_name_prefix_manage}-doclinks"
-      iam_user_name = "${var.iam_user_name_prefix_manage}-doclinks-${var.access_level_ro}"
-      access_level  = var.access_level_rw
-    },
-    custfiles = {
-      bucket_name   = "${var.s3bucket_name_prefix_manage}-custfiles"
-      iam_user_name = "${var.iam_user_name_prefix_manage}-custfiles-${var.access_level_rw}"
-      access_level  = var.access_level_rw
-    },
-    logs_rw = {
-      bucket_name   = "${var.s3bucket_name_prefix_manage}-logs"
-      iam_user_name = "${var.iam_user_name_prefix_manage}-log-${var.access_level_rw}"
-      access_level  = var.access_level_rw
-    },
-    logs_ro = {
-      bucket_name   = "${var.s3bucket_name_prefix_manage}-logs"
-      iam_user_name = "${var.iam_user_name_prefix_manage}-log-${var.access_level_ro}"
-      access_level  = var.access_level_ro
-    }
-  }
-
-  iam_users_by_bucket_manage = {
-    for bucket_name in distinct([for u in local.s3_iam_users_list_manage : u.bucket_name]) :
-    bucket_name => [
-      for u_key, u_info in local.s3_iam_users_list_manage :
-      local.iam_user_arns_manage[u_key]
-      if u_info.bucket_name == bucket_name
-    ]
-  }
-
-  bucket_user_names_manage = {
-    custfiles = "${var.iam_user_name_prefix_manage}-custfiles-${var.access_level_rw}"
-    doclinks  = "${var.iam_user_name_prefix_manage}-doclinks-${var.access_level_rw}"
-    logs_rw   = "${var.iam_user_name_prefix_manage}-log-${var.access_level_rw}"
-    logs_ro   = "${var.iam_user_name_prefix_manage}-log-${var.access_level_ro}"
-  }
-
-  bucket_user_name_map_manage = {
-    for key, value in local.s3_iam_users_list_manage :
-    key => lookup(local.bucket_user_names_manage, key, null)
-  }
-  #----Manage related params for S3 ends----
-{%- endif %}
-
-  #----Common S3 params starts----
-  s3_actions = {
-    ro = ["s3:GetObject", "s3:ListBucket"]
-    rw = ["s3:GetObject", "s3:PutObject", "s3:DeleteObject", "s3:ListBucket"]
-  }
-
-  location = var.location
-  #----Common S3 params ends----
-{%- endif %}
+{%- include 's3/_s3_config.yaml.j2' %}
   cluster = {
-  {%- if IS_S3 | lower == 'true' %}
-    instance = {
-      name = var.instance_name
-      {%- if S3_MANAGE | lower == 'true'  %}
-    #----Manage specific S3 buckets starts----
-      manage_s3buckets = {
-        doclinks = {
-          name_prefix          = var.name_prefix
-          create               = var.create_bucket
-          name                 = "${var.s3bucket_name_prefix_manage}-doclinks"
-          id                   = "${var.s3bucket_name_prefix_manage}-doclinks"
-          access_level         = "rw"
-          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-doclinks"
-          secret_suffix        = "manage_attachments/cos-attachments"
-          cos_secret_format    = false
-          manage_secret_format = true
-          expiration           = null
-        },
-        custfiles = {
-          name_prefix          = var.name_prefix
-          create               = var.create_bucket
-          name                 = "${var.s3bucket_name_prefix_manage}-custfiles"
-          id                   = "${var.s3bucket_name_prefix_manage}-custfiles"
-          access_level         = "rw"
-          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-custfiles"
-          secret_suffix        = "manage_custfiles/cos-custfiles"
-          cos_secret_format    = false
-          manage_secret_format = true
-          expiration = {
-            days = 366 // how long to keep logs
-          }
-        },
-        logs = {
-          name_prefix          = var.name_prefix
-          create               = var.create_bucket
-          name                 = "${var.s3bucket_name_prefix_manage}-logs"
-          id                   = "${var.s3bucket_name_prefix_manage}-logs"
-          access_level         = "ro"
-          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-logs"
-          secret_suffix        = "manage_logging/cos-logging"
-          cos_secret_format    = false
-          manage_secret_format = true
-          expiration           = null
-        }
-      }
-    #----Manage specific S3 buckets ends----
-    {%- endif %}
-    }
-    name = var.cluster_name
-    {%- endif %}
-  {%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') %}
-    #----EFS/MSK related params starts----
-    "external_subnet_ids" : data.aws_subnets.external_subnets.ids
-    "internal_subnet_ids" : data.aws_subnets.internal_subnets.ids
-    #----EFS/MSK related params ends----
-  {%- endif %}
-  {%- if IS_MSK | lower == 'true' %}
-    #----MSK related params starts----
-    "security_groups" : ["{{ SECURITY_GROUPS_VALUE }}"]
-    #----MSK related params ends----
-  {%- endif %}
+  {%- include 's3/_s3_buckets.yaml.j2' %}
+  {%- include 'common/_cluster_common.yaml.j2' %}
   }
-
-
- {%- if IS_EFS | lower == 'true' %}
-  #----EFS config related params starts----
-  multiple-efs = {
-{%- if EFS_MANAGE == "true" %}
-    manage-db2 = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-db2"])
-      performance_mode = "{{EFS_MANAGE_DB2_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_MANAGE_DB2_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_MANAGE_DB2_MOUNT_COUNT}}
-    }
-    manage-main = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-main"])
-      performance_mode = "{{EFS_MANAGE_MAIN_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_MANAGE_MAIN_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_MANAGE_MAIN_MOUNT_COUNT}}
-    }
-{%- endif %}
-{%- if EFS_IOT == "true" %}
-    iot-db2 = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "iot-db2"])
-      performance_mode = "{{EFS_IOT_DB2_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_IOT_DB2_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_IOT_DB2_MOUNT_COUNT}}
-    }
-{%- endif %}
-{%- if EFS_VISUALINSPECTION == "true" %}
-    visualinspection-main = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "visualinspection-main"])
-      performance_mode = "{{EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT}}
-    }
-{%- endif %}
-{%- if EFS_FACILITIES == "true" %}
-    facilities-db2 = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-db2"])
-      performance_mode = "{{EFS_FACILITIES_DB2_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_FACILITIES_DB2_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_FACILITIES_DB2_MOUNT_COUNT}}
-    }
-    facilities-main = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-main"])
-      performance_mode = "{{EFS_FACILITIES_MAIN_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_FACILITIES_MAIN_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_FACILITIES_MAIN_MOUNT_COUNT}}
-    }
-{%- endif %}
-  }
-  #----EFS config related params ends----
-{%- endif %}
-
- {%- if IS_MSK | lower == 'true' %}
-  #----MSK config related params starts----
-  multiple-msk = {
-{%- if MSK_IOT == "true" %}
-    iot-msk = {
-      name        = join("-", [var.cluster_name, var.instance_name, "iot"])
-      sre_prefix  = var.name_prefix
-      secret_name = join("-", [var.cluster_name, var.instance_name])
-      broker_volume_size = {{MSK_IOT_BROKER_VOLUME_SIZE}}
-      cluster_name = "{{MSK_IOT_CLUSTER_USERNAME}}"
-      broker_nodes = {{MSK_IOT_NUMBER_OF_BROKER_NODES}}
-      instance_type = "{{MSK_IOT_INSTANCE_TYPE}}"
-      kafka_version = "{{MSK_IOT_KAFKA_VERSION}}"
-    }
-{%- endif %}
-{%- if MSK_MONITOR == "true" %}
-    monitor-msk = {
-      name        = join("-", [var.cluster_name, var.instance_name, "monitor"])
-      sre_prefix  = var.name_prefix
-      secret_name = join("-", [var.cluster_name, var.instance_name])
-      broker_volume_size = {{MSK_MONITOR_BROKER_VOLUME_SIZE}}
-      cluster_name = "{{MSK_MONITOR_CLUSTER_USERNAME}}"
-      broker_nodes = {{MSK_MONITOR_NUMBER_OF_BROKER_NODES}}
-      instance_type = "{{MSK_MONITOR_INSTANCE_TYPE}}"
-      kafka_version = "{{MSK_MONITOR_KAFKA_VERSION}}"
-    }
-{%- endif %}
-  }
-  #----MSK config related params ends----
-{%- endif %}
+{%- include 'efs/_efs_config.yaml.j2' %}
+{%- include 'msk/_msk_config.yaml.j2' %}
 }
