--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
@@ -1,65 +1,8 @@
-{%- if (IS_EFS | lower == 'true') or (IS_S3 | lower == 'true') or (IS_MSK | lower == 'true') %}
-#----Common params starts----
-cluster_name         = "{{ CLUSTER_ID}}"
-instance_name        = "{{ MAS_INSTANCE_ID }}"
-vpc_id               = "{{ VPC_ID_VALUE}}"
-#----Common params ends----
-{%- endif %}
+{%- include 'common/_tfvars_common.yaml.j2' %}
 
 
-{%- if IS_EFS | lower == 'true' %}
+{%- include 'efs/_tfvars_efs.yaml.j2' %}
 
-#----EFS related params starts----
-vpc_name             = "{{ VPC_NAME_VALUE }}"
-#----EFS related params ends----
-{%- endif %}
+{%- include 'msk/_tfvars_msk.yaml.j2' %}
 
-{%- if (IS_S3 | lower == 'true') or (IS_MSK | lower == 'true') %}
-#----S3/MSK related params starts----
-name_prefix             = "{{ NAME_PREFIX_VALUE }}"
-#----S3/MSK related params ends----
-{%- endif %}
-
-{%- if IS_S3 | lower == 'true'  %}
-#----S3 related params starts----
-create_s3_iam_group     = false
-create_s3_iam_policy    = false
-create_efs_policy       = false
-common_tags = {
-    "source"      = "terraform",
-    "environment" = "{{ENVIRONMENT_VALUE}}",
-    "owner"       = "{{OWNER_VALUE}}",
-    "contact"     = "{{CONTACT_VALUE}}",
-    "cost-center" = "{{COST_CENTER_VALUE}}"
-}
-create_bucket        = true
-s3_encryption_algorithm = "AES256"
-account_id = "{{ACCOUNT_ID}}"
-location = {
-    region             = "{{REGION_NAME}}"
-    availability_zones = ["{{REGION_NAME}}a", "{{REGION_NAME}}b", "{{REGION_NAME}}c"]
-}
-{%- if S3_MANAGE | lower == 'true'  %}
-#----S3 Manage related params starts----
-s3bucket_name_prefix_manage    = "massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}"
-iam_user_name_prefix_manage = "massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}-sid"
-iam_user_arn_prefix_manage  = "arn:aws:iam::{{ACCOUNT_ID}}:user/massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}-sid"
-s3_iam_users_list_manage = {
-    doclinks = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-doclinks-rw"
-    },
-    custfiles = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-custfiles-rw"
-    },
-    logs_rw = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-log-rw"
-    },
-    logs_ro = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-log-ro"
-    }
-}
-#----S3 Manage related params ends----
-{%- endif %}
-
-#----S3 related params ends----
-{%- endif %}
+{%- include 's3/_tfvars_s3.yaml.j2' %}
