optimized main, terraform.tfvars

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
@@ -1,8 +1,8 @@
-{%- include 'common/_tfvars_common.yaml.j2' %}
+{% include 'common/_tfvars_common.yaml.j2' %}
 
 
-{%- include 'efs/_tfvars_efs.yaml.j2' %}
+{% include 'efs/_tfvars_efs.yaml.j2' %}
 
-{%- include 'msk/_tfvars_msk.yaml.j2' %}
+{% include 'msk/_tfvars_msk.yaml.j2' %}
 
-{%- include 's3/_tfvars_s3.yaml.j2' %}
+{% include 's3/_tfvars_s3.yaml.j2' %}
