--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
@@ -1,11 +1,13 @@
-{%- include 'common/_aws_data_sources.yaml.j2' %}
+{% include 'common/_aws_data_sources.yaml.j2' %}
 
 locals {
-{%- include 's3/_s3_config.yaml.j2' %}
+{% include 's3/_s3_config.yaml.j2' %}
   cluster = {
-  {%- include 's3/_s3_buckets.yaml.j2' %}
-  {%- include 'common/_cluster_common.yaml.j2' %}
+  {% include 's3/_s3_buckets.yaml.j2' %}
+  {% include 'common/_cluster_common.yaml.j2' %}
   }
-{%- include 'efs/_efs_config.yaml.j2' %}
-{%- include 'msk/_msk_config.yaml.j2' %}
+
+{% include 'efs/_efs_config.yaml.j2' %}
+
+{% include 'msk/_msk_config.yaml.j2' %}
 }
