[patch] generate pipeline artifacts

--- a/tekton/src/pipelines/aiservice-fvt-launcher.yml.j2
+++ b/tekton/src/pipelines/aiservice-fvt-launcher.yml.j2
@@ -57,6 +57,23 @@ spec:
       description: "Set this to 'true' to enable deprovision of the target cluster & associated resources following the completion of this pipeline"
 
   tasks:
+    - name: pipeline-start
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          value: Started
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
+
     - name: waitfor-aiservice
       timeout: "0"
       taskRef:
@@ -85,6 +102,8 @@ spec:
         - input: $(params.sync_with_install)
           operator: in
           values: ["true", "True"]
+      runAfter:
+        - pipeline-start
 
     - name: launchfvt-aiservice
       timeout: "0"
@@ -278,6 +297,25 @@ spec:
           value: $(params.image_pull_policy)
         - name: pipelinerun_name
           value: "$(context.pipelineRun.name)-fvt-finally"
+
+    - name: pipeline-finish
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          # An aggregate status of all the pipelineTasks under the tasks section (excluding the finally section).
+          # This variable is only available in the finally tasks and can have any one of the values (Succeeded, Failed, Completed, or None)
+          value: $(tasks.status)
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
 
   workspaces:
     # The generated configuration files
