--- a/tekton/src/pipelines/mas-fvt-deprovision-after.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-deprovision-after.yml.j2
@@ -78,6 +78,23 @@ spec:
       default: ""
 
   tasks:
+    - name: pipeline-start
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          value: Started
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
+
     # 0. Wait for the named pipeline to complete
     # -------------------------------------------------------------------------
     - name: wait-for-pipelinerun
@@ -95,6 +112,8 @@ spec:
           value: 60  # attempts before giving up (approximately 20 hours)
         - name: ignore_failure
           value: $(params.ignore_failure)
+      runAfter:
+        - pipeline-start
 
     # 1. Delete IBM Cloud services
     # -------------------------------------------------------------------------
@@ -132,3 +151,25 @@ spec:
       runAfter:
         - cos-deprovision
         - kafka-deprovision
+
+  # Finally
+  # ---------------------------------------------------------------------------
+  finally:
+    - name: pipeline-finish
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          # An aggregate status of all the pipelineTasks under the tasks section (excluding the finally section).
+          # This variable is only available in the finally tasks and can have any one of the values (Succeeded, Failed, Completed, or None)
+          value: $(tasks.status)
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
