--- a/tekton/src/pipelines/mas-fvt-mobile-requests.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-mobile-requests.yml.j2
@@ -56,7 +56,48 @@ spec:
 
 
   tasks:
+    - name: pipeline-start
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          value: Started
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
+
     # 2. Mobile FVT - Mobile Request tasks
     # -------------------------------------------------------------------------
     {{ lookup('template', 'taskdefs/fvt-mobile/requests/phase1-reqs.yml.j2') | indent(4) }}
+      runAfter:
+        - pipeline-start
     {{ lookup('template', 'taskdefs/fvt-mobile/requests/phase2-testng.yml.j2') | indent(4) }}
+
+  # Finally
+  # ---------------------------------------------------------------------------
+  finally:
+    - name: pipeline-finish
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          # An aggregate status of all the pipelineTasks under the tasks section (excluding the finally section).
+          # This variable is only available in the finally tasks and can have any one of the values (Succeeded, Failed, Completed, or None)
+          value: $(tasks.status)
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
