--- a/tekton/src/pipelines/mas-fvt-mobile-testng.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-mobile-testng.yml.j2
@@ -54,6 +54,22 @@ spec:
       default: ""
 
   tasks:
+    - name: pipeline-start
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          value: Started
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
 
     # Manage Components Information
     - name: fvt-component
@@ -63,6 +79,8 @@ spec:
       params:
         - name: mas_appws_components
           value: "$(params.mas_appws_components)"
+      runAfter:
+        - pipeline-start
 
     # 2. Manage FVT - Manage Mobile
     # -------------------------------------------------------------------------
@@ -72,3 +90,25 @@ spec:
     {{ lookup('template', 'taskdefs/fvt-mobile/testng/phase2-civil.yml.j2') | indent(4) }}
     {{ lookup('template', 'taskdefs/fvt-mobile/testng/phase3-mobfound.yml.j2') | indent(4) }}
     {{ lookup('template', 'taskdefs/fvt-mobile/testng/phase4-final.yml.j2') | indent(4) }}
+
+  # Finally
+  # ---------------------------------------------------------------------------
+  finally:
+    - name: pipeline-finish
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-update-pipeline-status
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: pipeline_status
+          # An aggregate status of all the pipelineTasks under the tasks section (excluding the finally section).
+          # This variable is only available in the finally tasks and can have any one of the values (Succeeded, Failed, Completed, or None)
+          value: $(tasks.status)
+        - name: pipeline_name
+          value: $(context.pipeline.name)
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)
+        - name: pipelinerun_namespace
+          value: $(context.pipelineRun.namespace)
